[package]
name = "learning-lm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4.3"
tokenizers = "0.19.1"
rand = "0.8"
num-traits = "0.2.19"
half = { version = "2.4.1", features = ["num-traits"] }
actix-web = "4.0"
actix-session = "0.5"
actix-rt = "2.5"
async-stream = "0.3"
bytes = "1"
actix-cors = "0.7.0"
futures = "0.3.31"
tokio = "1.43.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
cust = { version = "0.3" }
once_cell = "1.8"
lazy_static = "1.5.0"
[features]
default = []
gpu = ["single"]
single = []
